[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/fonts/Dialog.tres" type="DynamicFont" id=1]
[ext_resource path="res://scripts/Button.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "MouseOver"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 0.329877 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.3, 1.3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CenterContainer/DoneLabel:custom_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.678431, 0.678431, 0.678431, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="DoneButton" type="ColorRect"]
margin_left = 507.0
margin_top = 923.0
margin_right = 807.0
margin_bottom = 1023.0
rect_pivot_offset = Vector2( 150, 50 )
color = Color( 0.00784314, 0.00392157, 0.109804, 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 311.0
margin_bottom = 97.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DoneLabel" type="Label" parent="CenterContainer"]
margin_left = 112.0
margin_top = 26.0
margin_right = 199.0
margin_bottom = 70.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.678431, 0.678431, 0.678431, 1 )
text = "Done"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/MouseOver = SubResource( 1 )

[connection signal="gui_input" from="." to="." method="_on_DoneButton_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_DoneButton_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_DoneButton_mouse_exited"]
